--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
     -webkit-transition: 0.5s;
 }*/
 
+.disappear:hover {
+    height: 0;
+    width: 0;
+}
+
+
+
 .colorGreen {
     background-color: #33AA33;
 }
