Go back to more specific and less annoying solution:

--- a/style.css
+++ b/style.css
@@ -112,12 +112,12 @@ div.circle .altText{
 
 }
 
-img{
+a.sidebarImage img{
     height: 30px;
     width: 30px;
 }
 
-img:hover {
+a.sidebarImage:hover img{
     height: 0px;
     width: 0px;
 }
