Mostly tweaking/playing around with the site. - Removed example post - Updated contact information
TODO:
- Add documents, CV, etc.
- Potentially add more contact info (maybe blogs, etc)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,7 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <!-- Social Media -->
+  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
