--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,10 +12,13 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-doc-item" href="documents/cv.pdf">Curriculum Vitae</a>
-      <a class="sidebar-doc-item" href="documents/resume.pdf">Résumé</a>
+      <a class="sidebar-doc-item"
+         href="{{ '/documents/cv.pdf' | relative_url }}">Curriculum Vitae</a>
+      <a class="sidebar-doc-item"
+         href="{{ '/documents/resume.pdf' | relative_url }}">Résumé</a>
       </br>
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == '/' %} active{%
+      endif %}" href="{{ '/' | relative_url }}">Home</a>
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -26,7 +29,8 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{%
+            endif %}" href="{{ node.url | relative_url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
