Move around some content so the blog section isn't the first thing up on the site. Add a pubs page -- I'd almost be willing to call this a website now.

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -47,14 +47,19 @@ html {
 
 /* iangneal: no bullets for contact page */
 
-ul {
+ul.contact {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-ul p {
+ul.contact p {
   text-indent: 1.0rem;
+}
+
+ul {
+  padding: 0;
+  margin: 1rem;
 }
 
 
