--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,18 @@
 
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
-        {% if node.title != null %}
+        {% if node.title != null and node.title != "Contact" %}
+          {% if node.layout == "page" %}
+            <a class="sidebar-nav-item{% if page.url == node.url %} active{%
+            endif %}" href="{{ node.url | relative_url }}">{{ node.title }}</a>
+          {% endif %}
+        {% endif %}
+      {% endfor %}
+      {% comment %}
+        Force the contact item to be at the bottom of the nav.
+      {% endcomment %}
+      {% for node in pages_list %}
+        {% if node.title != null and node.title == "Contact" %}
           {% if node.layout == "page" %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{%
             endif %}" href="{{ node.url | relative_url }}">{{ node.title }}</a>
