--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,9 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+
+      <img src="{{ '/public/profile.jpg' | relative_url }}" alt="">
+
       <h1>
         <a href="{{ '/' | relative_url }}">
           {{ site.title }}
