--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,6 +39,7 @@
       {% endfor %}
       {% comment %}
         Force the contact item to be at the bottom of the nav.
+        TODO: less jank
       {% endcomment %}
       {% for node in pages_list %}
         {% if node.title != null and node.title == "Contact" %}
