--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -119,15 +119,18 @@ a.sidebar-nav-item:focus {
 }
 .sidebar-nav-item.active {
   font-weight: bold;
+  opacity: 0.7;
 }
 
 /* iangneal: Differentate the active item a bit more. */
+/*
 .sidebar-nav-item.active::after {
   content: " >";
 }
 .sidebar-nav-item.active::before {
   content: "< ";
 }
+*/
 
 /* iangneal: Do something different for document links. */
 a.sidebar-doc-item {
