--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,7 +30,7 @@
 
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
-        {% if node.title != null and node.title != "Contact" %}
+        {% if node.title != null and node.title != "Contact" and node.title != "Blog" %}
           {% if node.layout == "page" %}
             <a class="sidebar-nav-item{% if page.url == node.url %} active{%
             endif %}" href="{{ node.url | relative_url }}">{{ node.title }}</a>
