--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -87,6 +87,9 @@ ul {
     /*width: 18rem;*/
     width: 16rem;
     text-align: left;
+
+    /* position: relative; */
+    /* overflow-y: scroll; */
   }
 }
 
@@ -95,10 +98,29 @@ ul {
   color: #fff;
 }
 
+/* Sidebar image */
+.sidebar-img-wrapper {
+  /* display: inline-block; change the default display type to inline-block */
+  /* overflow: hidden;      hide the overflow */
+  /* background-image: url(/public/profile.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%; */
+}
+
+.sidebar-img-wrapper img {
+  /* max-width: 100%;
+  max-height: 100%; */
+  /* height: 100%; */
+  width: 70%;
+  align-content: center;
+  /* overflow-y: scroll; */
+}
+
 /* About section */
 .sidebar-about h1 {
   color: #fff;
-  margin-top: 0;
+  margin-top: 1rem;
   /* iangneal: Not digging this font.
   font-family: "Abril Fatface", serif;
   */
