--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -13,7 +13,7 @@ layout: default
 
   <article>
     {% if page.profile %}
-    <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
+    <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %} margin-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
       {% if page.profile.image %}
         <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
       {% endif %}
@@ -25,11 +25,12 @@ layout: default
     </div>
     {% endif %}
 
-    <div class="clearfix">
+    <div class="clearfix" style="text-align: justify;">
       {{ content }}
     </div>
 
     {% if page.news %}
+      <br/>
       {% include news.html %}
     {% endif %}
 
