--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
           {% if p.nav and p.autogen == nil %}
           <li class="nav-item {% if page.title == p.title %}active{% endif %}">
               <a class="nav-link" href="{{ p.url | relative_url }}">
-                {{ p.title }}
+                {{ p.title | downcase }}
                 {% if page.title == p.title %}
                 <span class="sr-only">(current)</span>
                 {% endif %}
