--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,8 @@
 <div class="publications">
   <h2>Selected Publications</h2>
   {% bibliography -f papers -q @*[selected=true]* %}
+
+  <div class="more" style="text-align: center;">
+    <a href="/publications" class="btn btn-md" role="button">See all publications</a>
+  </div>
 </div>
