--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,6 +2,7 @@
 ---
 
 <div class="row">
+  {% unless entry.type == "patent" or entry.type == "thesis" %}
   <div class="col-sm-2 abbr">
   {% if entry.abbr %}
     {% if site.data.venues[entry.abbr] %}
@@ -11,9 +12,14 @@
     {% endif %}
   {% endif %}
   </div>
+  {% endunless %}
 
+  {% unless entry.type == "patent"%}
   <div id="{{entry.key}}" class="col-sm-8">
-    {% if entry.type == "thesis" %}
+  {% else %}
+  <div id="{{entry.key}}" class="col-sm-10">
+  {% endunless %}
+    {% if false and entry.type == "thesis" %}
       {{reference}}
     {% else %}
       <div class="title">{{entry.title}}</div>
@@ -58,7 +64,9 @@
       {% elsif entry.type == "inproceedings" %}
         <em>In {{entry.booktitle}}</em>
       {% endif %}
-      {% if entry.year %}
+      {% if entry.year and entry.month %}
+        {{entry.month | date: "%B"}} {{entry.year}}
+      {% elsif entry.year %}
         {{entry.year}}
       {% endif %}
       </div>
@@ -67,6 +75,13 @@
     <div class="links">
     {% if entry.abstract %}
       <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
+    {% endif %}
+    {% if entry.ext_abs %}
+      {% if entry.ext_abs contains '://' %}
+      <a href="{{ entry.ext_abs }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Extended Abs (PDF)</a>
+      {% else %}
+      <a href="{{ entry.ext_abs | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Extended Abs (PDF)</a>
+      {% endif %}
     {% endif %}
     {% if entry.arxiv %}
       <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button" target="_blank">arXiv</a>
@@ -107,6 +122,9 @@
       {% else %}
       <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Slides</a>
       {% endif %}
+    {% endif %}
+    {% if entry.url %}
+      <a href="{{ entry.url }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Url</a>
     {% endif %}
     {% if entry.website %}
       <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button" target="_blank">Website</a>
