Change author highlighting
- Only highlight my own name in color. Co-authors with websites now get
  dashed underline only
- Recommended by Baris for better emphasis

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -416,15 +416,19 @@ footer.sticky-bottom {
       }
       .author {
         a {
-          border-bottom: 1px dashed var(--global-theme-color);
+          // border-bottom: 1px dashed var(--global-theme-color);
+          border-bottom: 1px dashed;
           &:hover {
               border-bottom-style: solid;
               text-decoration: none;
           }
+          color: unset;
         }
         > em {
-          border-bottom: 1px solid;
+          // border-bottom: 1px solid;
           font-style: normal;
+          font-weight: bold;
+          color: var(--global-theme-color);
         }
       }
       .links {
