--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -63,6 +63,8 @@
         <em>{{entry.journal}}</em>
       {% elsif entry.type == "inproceedings" %}
         <em>In {{entry.booktitle}}</em>
+      {% elsif entry.type == "peer-reviewed" %}
+        <em>In {{entry.booktitle}}<br></em>
       {% endif %}
       {% if entry.year and entry.month %}
         {{entry.month | date: "%B"}} {{entry.year}}
