Update webpage with 2023 info

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,7 +2,7 @@
 ---
 
 <div class="row">
-  {% unless entry.type == "patent" or entry.type == "thesis" %}
+  {% unless entry.type == "patent" or entry.type == "thesis" or entry.type == "dissertation" %}
   <div class="col-sm-2 abbr">
   {% if entry.abbr %}
     {% if site.data.venues[entry.abbr] %}
